name:                stack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stock
                     , RepaStock
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , vector
  default-language:    Haskell2010

executable stack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -eventlog -rtsopts -fno-full-laziness
  -- ghc-options:         -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3 -eventlog
  build-depends:       base
                     , stack
                     , random
                     , criterion
  default-language:    Haskell2010

test-suite stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stack
